[package]
name = "orbweaver-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbweaver = { git = "https://github.com/ixpantia/orbweaver-rs.git" }
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3.69", features = ["console"] }
