[package]
name = "orbweaver-wasm"
version = "0.10.1"
edition = "2021"

[lib]
crate-type=["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbweaver = { version = "0.10.1" }
wasm-bindgen = { version = "0.2.92", features = ["serde", "serde_json"] }
wee_alloc = "0.4.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3.69", features = ["console"] }
log = "0.4.21"
serde_json = "1.0.117"
console_error_panic_hook = "0.1.7"
