[package]
name = "orbweaver-wasm"
version = "0.11.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbweaver = { version = "0.11.0" }
wasm-bindgen = { version = "0.2.92", features = ["serde"] }
web-sys = { version = "0.3.69", features = ["console"] }
console_error_panic_hook = "0.1.7"
